fixed spacing of keyframe code

--- a/css/main.css
+++ b/css/main.css
@@ -55,7 +55,8 @@ html {
 }
 
 @keyframes rotate {
-  100% {
-    transform: rotateZ(360deg);
-  }
+
+  0% { transform: rotate(0deg); }
+
+  100% { transform: rotate(360deg); }
 }
